--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio_frontend",
   "version": "0.1.0",
-  "homepage": "https://tahasafdari.github.io/hasansafdari",
+  "homepage": "https://tahasafdari.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
